# full_warehouse

./: .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .jvmopts  .yo-rc.json  AJUSTEMENT_REFACTORING.md  ANALYSE_MODULE_SUGGESTIONS.md  ANALYSE_REAPPROD.md  ANALYSE_UX_COMMANDE.md  ANALYSE_UX_COMMANDE_RECEPTION.md  ANALYSE_UX_WORKFLOW_SUGGESTIONS_COMMANDES_RECEPTION.md  ARCHITECTURE_UI_FINALE.md  CAISSIER_DASHBOARD_IMPLEMENTATION.md  CLAUDE.md  CUSTOM-TITLEBAR.md  CUSTOMER_DISPLAY_CONFIGURATION.md  CUSTOMER_DISPLAY_FINAL_SUMMARY.md  CUSTOMER_DISPLAY_IMPLEMENTATION_SUMMARY.md  CUSTOMER_DISPLAY_TAURI_INTEGRATION.md  CUSTOMER_DISPLAY_USB_QUICKSTART.md  CUSTOMIZE-JVM-OPTIONS.md  DASHBOARD_SERVICES_REFACTORING_RECOMMENDATION.md  DEPLOYMENT_GUIDE.md  ELECTRON_PACKAGING_FIX.md  ELECTRON_README.md  GEMINI.md  HOME_COMPONENT_ADAPTATION.md  HOW-TO-CONFIGURE-BACKEND.md  HOW_TO_RUN_ELECTRON.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_PDF_EXPORTS.md  IMPLEMENTATION_SUMMARY_PHASE1.md  INSTALL.txt  INVENTORY_PROPOSAL.md  JVM-CONFIGURATION.md  JVM-OPTIONS-SUMMARY.md  JVM-QUICK-START.md  KEYBOARD-SHORTCUTS-IMPROVEMENTS.md  LOGS-QUICK-REFERENCE.md  (+81 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json
docker/: docker-compose.yml  init-pharma-smart.sql
docs/: ANALYSE-ACTIVITY-SUMMARY-VS-DASHBOARD.md  ANALYSE-COMPARATIVE-RAPPORTS-OFFICINE.md  ANALYSE-DASHBOARD-PHARMACIEN.md  ANALYSE-ENTITE-PRODUIT-FOURNISSEUR.md  ANALYSE-FACTURATION.md  ANALYSE-GESTION-PEREMPTION.md  ANALYSE-MODULE-COMPTABILITE-OFFICINE.md  ANALYSE-MODULE-RECEPTION-BL.md  ANALYSE-MODULE-REPORTS-ANGULAR.md  ANALYSE-MODULE-VENTE.md  ANALYSE-NAVIGATION-LAYOUT.md  ANALYSE-RAPPORTS-COMPARATIFS-EVOLUTIFS.md  ANALYSE-RAYON-EMPLACEMENT.md  ANALYSE-SAISIE-LOT-HORS-COMMANDE.md  ANALYSE-SCAN.md  ANALYSE-UX-SUIVI-MOUVEMENTS-ARTICLE.md  BACKEND-RESTART-GUIDE.md  BACKUP-STRATEGY.md  FIREBASE_SETUP_GUIDE.md  HOW-TO-CONFIGURE-BACKEND.md  INVENTORY_ANALYSIS.md  PHARMAML_INTEGRATION_PLAN.md  PLAN-2.4-AVOIR-CAISSE.md  PLAN-AMELIORATION-COMPTES-FOURNISSEURS.md  PLAN-AMELIORATION-RECEPTION-BL.md  PLAN-AMELIORATION-TAURI.md  PLAN-AVOIR-RETOUR-CLIENT.md  PLAN-BON-ENTREE-DIVERSE.md  PLAN-COMPLETION-FACTURATION.md  PLAN-DURCISSEMENT-TYPAGE-FRONT.md  PLAN-FINAL-MODULE-RAPPORTS.md  PLAN-GESTION-MENU-ACCESS-DYNAMIQUE.md  PLAN-IMPLEMENTATION-MODULE-REPORTS.md  PLAN-LAZY-LOADING-DASHBOARDS-ONGLETS.md  PLAN-MIGRATION-BUILDER-ESBUILD.md  PLAN-MIGRATION-PRIMENG-VERS-NGBOOTSTRAP.md  PLAN-MODULE-COMPTABILITE.md  PLAN-MODULE-FINANCES-FINAL.md  PLAN-PERMISSIONS-TABS-SIDEBAR.md  PLAN-PERSONNALISATION-MODELES-FACTURE.md  (+25 more)
mobile/: CLAUDE.md  pubspec.yaml
mobile-inventory/: CLAUDE.md  GEMINI.md  IMPLEMENTATION_GUIDE.md  README.md  build.gradle  gradle.properties  proguard-rules.pro  settings.gradle
mobile-inventory/.claude/: settings.local.json
mobile/android/: settings.gradle
mobile/lib/: main.dart
mobile/linux/: CMakeLists.txt
pharma-mobile-report/: FEATURES_A_IMPLEMENTER.md  GEMINI.md  PLAN_INTEGRATION_RAPPORTS.md  build.gradle.kts  google-services.json  gradle.properties  proguard-rules.pro  settings.gradle.kts
pharma-mobile-report/gradle/: libs.versions.toml
pharmaSmart-app/: pom.xml
pharmaSmart-batch/: README.md  pom.xml
pharmaSmart-batch/service/: install-batch-service.ps1  uninstall-batch-service.ps1
pharmaSmart-core/: .flattened-pom.xml  pom.xml
pharmaSmart-domain/: pom.xml
reports/: genericHtml.jrxml  warehouse_etiqettes.jasper  warehouse_etiqettes.jrxml  warehouse_facture.jasper  warehouse_inventaire.jasper  warehouse_inventaire.jrxml  warehouse_stock_transaction.jasper  warehouse_stock_transaction.jrxml
sales-android/: CLAUDE.md  COMPOSE_SETUP.md  CORRECTIONS_TESTS_APPLIQUEES.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  PHASE_1_2_STATUS.md  PHASE_2_BUILD_STATUS.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PLAN_ASSURANCE_CARNET.md  PRINTER_CONFIGURATION.md  PRINTER_SETUP_COMPLETE.md  PRINTER_SIMULATION.md  PRIORITE_1_COMPLETE.md  PRIORITE_2_AVANCEMENT.md  PRIORITE_2_COMPLETE.md  PRODUCT_ADDITION_BUSINESS_RULES.md  README.md  REFACTORING_WORKFLOW_VENTE.md  SESSION_COMPLETION_SUMMARY.md  SINGLE_STEP_FINALIZATION.md  STOCK_VALIDATION_IMPLEMENTATION.md  TESTING.md  TEST_PRINTER.md  TEST_STATUS.md  WORKFLOWS_VENTE_MOBILE.md  build.gradle  build.gradle.kts  comptantsale.md  expert_ux.agent.md  fullsale.md  gradle.properties  gradlew.bat  proguard-rules.pro  settings.gradle  settings.gradle.kts
sales-android/.claude/: settings.local.json
sales-android/_excluded_phase2/: InsuranceDataViewModelTest.kt  UnifiedSaleActivity.kt  UnifiedSaleViewModel.kt
scripts/: copy-backup-exe.js  copy-winsw.js  generate-cahier-recette-json.ts  generate-pharma-tokens.mjs  inject-angular-into-jar.ps1  prepare-backup.js  prepare-sidecar.js  strip-safe-nav-migration.js  sync-version.js
scripts/init_pharma_db/: Cargo.toml  README.md
scripts/init_pharma_db/src/: main.rs
service/: pharmasmart-app.xml  pharmasmart-batch.xml  pharmasmart-setup.ps1
src-backup/: Cargo.toml  README.md
src-backup/src/: base.rs  check.rs  config.rs  dump.rs  logger.rs  main.rs  pg_discover.rs  purge.rs  sentinel.rs
src-tauri/: .gitignore  Cargo.toml  backend-url.txt.template  config.default.json  tauri.bundled-jre.conf.json  tauri.bundled.conf.json  tauri.conf.json
src-tauri/backup/: README.md  remove-backup-tasks.ps1  setup-backup-tasks.ps1
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/installer-hooks/: configure-database.ps1  db-defaults.json  db-defaults.nsh  installer.nsh  stop-backend.ps1
src-tauri/service/: refresh-service-config.ps1  remove-backend-service.ps1  remove-batch-service.ps1  setup-backend-service.ps1  setup-batch-service.ps1
src-tauri/sidecar/: .gitignore  README.md  pharmasmart-backend.bat
src-tauri/src/: backend_manager.rs  config.rs  customer_display.rs  lib.rs  main.rs  printer.rs  scanner.rs  types.rs
src-tauri/wix/: pharmasmart-config.wxs
src/assembly/: full-dist.xml
webpack/: environment.js  proxy.conf.js  webpack.custom.js
(+7188 files in other folders)
