[package]
name    = "pharmasmart-backup"
version = "0.1.0"
edition = "2024"
authors = ["Kobena"]
description = "Outil de sauvegarde autonome de la base PostgreSQL de PharmaSmart"

[[bin]]
name = "pharmasmart-backup"
path = "src/main.rs"

[dependencies]
anyhow             = "1"
chrono             = { version = "0.4", features = ["serde"] }
clap               = { version = "4", features = ["derive"] }
dirs               = "6"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir            = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true
