[package]
name = "pharmasmart"
version = "0.0.1"
description = "Pharma Smart"
authors = ["Kobena"]
edition = "2021"

[lib]
name = "pharmasmart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = "0.25"
serialport = { version = "4.5", optional = true }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Printing",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[features]
default = ["serialport"]
serialport = ["dep:serialport"]
bundled-backend = []
